--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = "http://blog.hamiltonian.net/"
 languageCode = "en"
 title = "The Universal Cover"
 theme = "hamiltonian"
+canonifyUrls = "true"
